<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>tk.freaxsoftware.ribbon2</groupId>
        <artifactId>IO</artifactId>
        <version>1.0</version>
    </parent>
    <groupId>tk.freaxsoftware.ribbon2.io.unit</groupId>
    <artifactId>exchanger-unit</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <name>Ribbon2 Exchanger Unit</name>
    <description>Main unit to launch importers/exporters;</description>
    <developers>
        <developer>
            <id>spoilt</id>
            <name>Stanislav Nepochatov</name>
            <organization>Freax Software</organization>
            <organizationUrl>freaksoftware.tk</organizationUrl>
            <email>spoilt.exile@gmail.com</email>
        </developer>
    </developers>
    
    <dependencies>
        <dependency>
            <groupId>tk.freaxsoftware.extras</groupId>
            <artifactId>messagebus</artifactId>
            <version>6.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2</groupId>
            <artifactId>core</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>core</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>importer-plain</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>importer-mail</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>importer-telegram</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>importer-rss</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>exporter-plain</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>exporter-mail</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.17.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>io.ebean</groupId>
            <artifactId>ebean</artifactId>
            <version>15.5.0</version>
        </dependency>
        <dependency>
            <groupId>io.ebean</groupId>
            <artifactId>querybean-generator</artifactId>
            <version>15.5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>3.8.9</version>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-cdi</artifactId>
            <version>4.29.1</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.33</version>
        </dependency>
        <dependency>
            <groupId>no.api.freemarker</groupId>
            <artifactId>freemarker-java8</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.16.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.16.0</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.3.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
              <groupId>io.ebean</groupId>
              <artifactId>ebean-maven-plugin</artifactId>
              <version>15.5.0</version>
              <executions>
                <execution>
                  <id>main</id>
                  <phase>process-classes</phase>
                  <configuration>
                    <transformArgs>debug=1</transformArgs>
                  </configuration>
                  <goals>
                    <goal>enhance</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>tk.freaxsoftware.ribbon2.exchanger.ExchangerUnit</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-my-jar-with-dependencies</id>
                        <phase>package</phase>
                        <configuration>
                            <finalName>exchanger-static</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>
</project>